--- a/.vibe/project.json
+++ b/.vibe/project.json
@@ -1,1 +1,6 @@
-json<br>{<br> "name": "hello-ys",<br> "description": "Vibe Coding 테스트 프로젝트",<br> "language": "javascript",<br> "createdWith": "Codex"<br>}<br>
+{
+  "name": "hello-ys",
+  "description": "Vibe Coding 테스트 프로젝트",
+  "language": "javascript",
+  "createdWith": "Codex"
+}
